[gd_scene load_steps=12 format=3 uid="uid://blkwssqojb7g"]

[ext_resource type="Texture2D" uid="uid://diwwgake8355a" path="res://Animation/Main charachter/Main_character_talk0.png" id="1_6xa1e"]
[ext_resource type="Script" path="res://Activity1_synth/animation_activity_1.gd" id="1_w15op"]
[ext_resource type="Texture2D" uid="uid://bdoggrc2yv4nl" path="res://Animation/Main charachter/Main_character_talk1.png" id="2_fyrpl"]
[ext_resource type="Texture2D" uid="uid://cwfgcpk7nhac0" path="res://Animation/Main charachter/Main_character_talk2.png" id="3_m0pk0"]
[ext_resource type="Texture2D" uid="uid://dcg1woduos7p" path="res://Animation/Main charachter/Main_character_talk3.png" id="4_hset4"]
[ext_resource type="Texture2D" uid="uid://boo5hyw81aww2" path="res://Animation/UI Animation/transparentLight23.png" id="5_aln7k"]
[ext_resource type="PackedScene" uid="uid://dvihby5h57lu1" path="res://Synth_scene/Settings/Settings.tscn" id="7_j6rii"]
[ext_resource type="PackedScene" uid="uid://kwr6dwirb8jd" path="res://Synth_scene/Synth/Synth.tscn" id="8_ca3va"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2svht"]
texture = ExtResource("5_aln7k")
modulate_color = Color(0.364706, 0.364706, 0.364706, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mwdlh"]
texture = ExtResource("5_aln7k")

[sub_resource type="SpriteFrames" id="SpriteFrames_cyfdd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6xa1e")
}, {
"duration": 1.0,
"texture": ExtResource("2_fyrpl")
}, {
"duration": 1.0,
"texture": ExtResource("3_m0pk0")
}, {
"duration": 1.0,
"texture": ExtResource("4_hset4")
}],
"loop": true,
"name": &"Character_talk",
"speed": 7.0
}]

[node name="Activity1" type="CanvasLayer" node_paths=PackedStringArray("synth")]
script = ExtResource("1_w15op")
synth = NodePath("Synth")

[node name="Synth" parent="." instance=ExtResource("8_ca3va")]

[node name="wave_activity1" type="MarginContainer" parent="."]
offset_left = 1057.0
offset_top = 574.0
offset_right = 1125.0
offset_bottom = 649.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="wave_activity1" type="Button" parent="wave_activity1"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_2svht")
theme_override_styles/hover = SubResource("StyleBoxTexture_mwdlh")

[node name="Character_talk" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(845, 303)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_cyfdd")
animation = &"Character_talk"

[node name="Intro_activity1" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 1057.0
offset_top = 575.0
offset_right = -28.0
offset_bottom = 648.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="Intro_activity1" type="Button" parent="Intro_activity1"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_2svht")
theme_override_styles/hover = SubResource("StyleBoxTexture_mwdlh")

[node name="Settings" parent="." instance=ExtResource("7_j6rii")]

[connection signal="pressed" from="wave_activity1/wave_activity1" to="." method="_on_wave_activity_1_pressed"]
[connection signal="pressed" from="Intro_activity1/Intro_activity1" to="." method="_on_intro_activity1_pressed"]
